[package]
name = "minesweeper_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
win-screenshot = "4.0.4"
image-compare = "0.3.0"
itertools = "0.11.0"
mouse-rs = "0.4"
highs-sys = "1.6.0"
highs = "1.5.1"
